--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "graphql-first-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "hhttps://jorgemezapaz.github.io",
+  "homepage": "https://jorgemezapaz.github.io/rick-and-morty-grapql",
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@testing-library/jest-dom": "^5.14.1",
